# openrelik-worker-timesketch

./: .coveragerc  .dockerignore  Dockerfile  README.md  openrelik.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-test.yaml
src/: app.py  tasks.py
tests/: test_tasks.py
