[tool.poetry]
name = "openrelik-timesketch-worker"
version = "0.3.0"
description = "Interact with Timesketch"
authors = ["Johan Berggren <jberggren@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^2024.11.27"
timesketch-api-client = "^20240215"
timesketch-import-client = "^20230721"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
